fix(combobox): add min-width 12ch to trigger text to delay truncation

--- a/components/Combobox/Combobox.module.scss
+++ b/components/Combobox/Combobox.module.scss
@@ -41,6 +41,7 @@
 
   .triggerText {
     flex: 1;
+    min-width: 12ch;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
